@@ -6,8 +6,8 @@
 	<groupId>com.boubei</groupId>
 	<artifactId>tss</artifactId>
 	<packaging>war</packaging>
-	<version>4.4</version>
-	<name>BouBei TSS-BI Project</name>
+	<version>5.0</version>
+	<name>BouBei TSS Project</name>
 	
 	<organization>
 		<name>boubei software</name>
@@ -17,10 +17,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<tss.version>4.4</tss.version>
-		<jdk.version>1.7</jdk.version>
-		<spring.version>3.2.18.RELEASE</spring.version>
-		<hibernate.version>3.5.1-Final</hibernate.version>
+		<tss.version>5.0</tss.version>
+		<jdk.version>1.8</jdk.version>
+		<spring.version>5.1.5.RELEASE</spring.version>
+		<hibernate.version>5.3.7.Final</hibernate.version>
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 	</properties>
 
@@ -88,7 +88,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
+			<artifactId>spring-context-support</artifactId> <!-- Timer、Quartz -->
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
@@ -112,16 +112,16 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-		<!-- Add JPA 2.0 / Hibernate 3 dependencies -->
-		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
-		</dependency>
+		<!-- Add JPA 2.0 / Hibernate dependencies -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
+			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-entitymanager</artifactId>
+		    <version>${hibernate.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -129,14 +129,6 @@
 			<artifactId>c3p0</artifactId>
 			<version>0.9.1.2</version>
 		</dependency>
-		
-		<!-- Oracle DB driver 4 release 
-		<dependency>
-			<groupId>ojdbc</groupId>
-			<artifactId>ojdbc</artifactId>
-			<version>14</version>
-		</dependency>
-		-->
 
 		<!-- Mysql DB driver 4 release -->
 		<dependency>
@@ -158,13 +150,22 @@
 		    <artifactId>mssql-jdbc</artifactId>
 		    <version>6.2.2.jre7</version>
 		</dependency>
+		
+		<!-- Oracle DB driver 4 release 
+		<dependency>
+			<groupId>ojdbc</groupId>
+			<artifactId>ojdbc</artifactId>
+			<version>14</version>
+		</dependency>
+		-->
 
 		<!-- Other DEPENDENCIES -->
 		<dependency>
-			<groupId>freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-			<version>2.3.8</version>
+		    <groupId>org.freemarker</groupId>
+		    <artifactId>freemarker</artifactId>
+		    <version>2.3.28</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
@@ -198,41 +199,16 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.12</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20180130</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
-		</dependency>
-
-		<!--  CMS DEPENDENCIES -->
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-			<version>2.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers</artifactId>
-			<version>2.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-highlighter</artifactId>
-			<version>2.2.0</version>
-		</dependency>
-		<!-- tss dependencies end -->
-		
-		<!-- 条形码、二维码 -->
-		<dependency>
-			<groupId>net.sf.barcode4j</groupId>
-			<artifactId>barcode4j-light</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.zxing</groupId>
-			<artifactId>core</artifactId>
-			<version>3.2.0</version>
 		</dependency>
 		
 		<!-- excel -->
@@ -269,7 +245,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.6</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -284,6 +260,7 @@
 			<version>2.3</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<!-- H2 DEPENDENCIES -->
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -292,41 +269,37 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<!-- extendion -->
-		<!-- aes 解密 -->
-		<dependency>  
-            <groupId>org.bouncycastle</groupId>  
-            <artifactId>bcprov-jdk16</artifactId>  
-            <version>1.46</version>  
-        </dependency>
-		<!-- aliyun sdk -->
+		<!-- Jetty DEPENDENCIES -->
 		<dependency>
-            <groupId>com.aliyun</groupId>
-		    <artifactId>aliyun-java-sdk-core</artifactId>
-		    <version>3.2.8</version>
-		</dependency>
-		<dependency>
-			<groupId>com.aliyun</groupId>
-			<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<!-- Alipay -->
-		<dependency>
-		    <groupId>com.alipay.sdk</groupId>
-		    <artifactId>alipay-sdk-java</artifactId>
-		    <version>3.0.1</version>
-		</dependency>
-		<!-- WeChat pay -->
-		<dependency>
-		    <groupId>com.github.wxpay</groupId>
-		    <artifactId>wxpay-sdk</artifactId>
-		    <version>0.0.3</version>
+			<groupId>org.eclipse.jetty.aggregate</groupId>
+			<artifactId>jetty-all</artifactId>
+			<version>8.1.12.v20130726</version>
+			<scope>test</scope>
 		</dependency>
 		
+		<!-- provided -->
 		<dependency>
-		    <groupId>org.json</groupId>
-		    <artifactId>json</artifactId>
-		    <version>20180130</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		    <version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!--  CMS DEPENDENCIES -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-highlighter</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 		
 	</dependencies>
@@ -372,7 +345,7 @@
                         </goals>  
                     </execution>  
                 </executions>  
-            </plugin>
+            </plugin>            
 
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -383,9 +356,49 @@
 						<include>**/*Test.java </include>
 					</includes>
 					<testFailureIgnore>true</testFailureIgnore>
+					<argLine>
+						-Xms256m -Xmx1024m -XX:MaxPermSize=256M
+					</argLine>
+					<forkCount>1</forkCount>
+        			<reuseForks>true</reuseForks> <!-- 表示一个测试进程执行完了之后是杀掉还是重用来继续执行后续的测试。 默认配置为forkCount=1/reuseForks=true -->
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.16</version>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<locales>EN</locales> <!-- ZH_CN -->
+				</configuration>
+			</plugin>
+
+			<!-- test coverage: mvn cobertura:cobertura -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.2</version>
+				<executions>
+					<execution>
+						<phase>site</phase>
+						<goals>
+							<goal>cobertura</goal>
+						</goals>
+					</execution>
+				</executions>
+				<!-- JDK7版本要加入以下設定
+                <configuration>
+                    <argLine>-XX:-UseSplitVerifier</argLine>
+                </configuration>
+                 -->
+			</plugin>
+			
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -406,27 +419,10 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<locales>EN</locales> <!-- ZH_CN -->
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.16</version>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
-				
-				<!--将Java源码类编译文件打成jar包-->
 				<configuration>
-                    <archiveClasses>true</archiveClasses> 
+                    <archiveClasses>true</archiveClasses> <!--将Java源码类编译文件打成jar包-->
                     <webResources>
 			            <resource>
 			                <directory>target/classes</directory>
@@ -454,18 +450,12 @@
 						<configuration>
 							<tasks>
 								<echo>
-									process log4j.properties: set
-									log4j.logger.com.boubei to ${log.level};
+									process log4j.properties: set log4j.logger.com.boubei to ${log.level};
 								</echo>
-								<replaceregexp file="${basedir}/target/classes/log4j.properties"
-									match="=debug" replace="=${log.level}" byline="true" />
-								
-								<echo>
-									process application.properties: set security.level to ${security.level};
-								</echo>
-								<replaceregexp
-									file="${basedir}/target/classes/application.properties" 
-									match="security.level = 2" replace="security.level = ${security.level}" byline="true" />
+								<replaceregexp 
+									file="${basedir}/target/classes/log4j.properties"
+									match="log4j.logger.com.boubei=debug" 
+									replace="log4j.logger.com.boubei=${log.level}" byline="true" />
 									
 								<echo>
 									process application.properties: set job.enable to ${job.enable};
@@ -475,13 +465,20 @@
 									match="job.enable = true" replace="job.enable = ${job.enable}" byline="true" />
 
 								<echo>
-									process application.properties: set last.package.time to ${maven.build.timestamp};
+									process application.properties: set security.level to ${security.level};
+								</echo>
+								<replaceregexp
+									file="${basedir}/target/classes/application.properties" 
+									match="security.level = 2" replace="security.level = ${security.level}" byline="true" />
+									
+								<echo>
+									process application.properties: set last.package.time to
+									${maven.build.timestamp};
 								</echo>
 								<replaceregexp
 									file="${basedir}/target/classes/application.properties" 
 									match="last\.package\.time = yyyy-MM-dd hh:mi:ss"
 									replace="last\.package\.time = ${maven.build.timestamp}" byline="true" />
-
 								<echo>
 									process application.properties: set localhost:3306/tss to ${db.url};
 								</echo>
@@ -494,7 +491,6 @@
 								<replaceregexp
 									file="${basedir}/target/classes/application.properties" 
 									match="localhost:3306\/tss" replace="${db.url}" byline="true" />
-
 								<echo>
 									process application.properties: set environment to ${environment};
 								</echo>
@@ -527,11 +523,71 @@
 				</dependencies>
 			</plugin>
 			
+			<!-- mvn clean compile assembly:single -->
+			<plugin>
+				<artifactId> maven-assembly-plugin </artifactId>
+				<version>2.4</version>
+				<configuration >
+					<descriptors>
+						<descriptor>src/main/assembly/tss-client-package.xml</descriptor>
+						<descriptor>src/main/assembly/tss-all-package.xml</descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-jar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin> 
+        	
 		</plugins>
 	</build>
-	
+
+	<profiles>
+		<!-- eg: mvn clean install  -Pxxx -Dmaven.test.skip=true -->
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<environment>dev-tss</environment>
+				<security.level>6</security.level>
+				<log.level>info</log.level>
+				<job.enable>true</job.enable>
+				<db.username>root</db.username>
+				<db.password>boubei@com</db.password>
+				<db.url>127.0.0.1:3306/tssbi</db.url>
+				<tomcat.url>localhost:8088</tomcat.url>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>boubei</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<environment>matrix</environment>
+				<security.level>6</security.level>
+				<log.level>info</log.level>
+				<job.enable>true</job.enable>
+				<db.username>root</db.username>
+				<db.password>boubei@com</db.password>
+				<db.url>boubei.com:3306/tssbi</db.url>
+				<tomcat.url>www.boubei.com</tomcat.url>
+			</properties>
+		</profile>
+		
+	</profiles>
+
 	<reporting>
 		<plugins>
+			<!-- mvn dashboard:dashboard -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>dashboard-maven-plugin</artifactId>
@@ -546,49 +602,5 @@
 			<url>file://</url>
 		</site>
 	</distributionManagement>
-
-	<repositories>
-		<repository>
-			<id>Central</id>
-			<url>http://repo1.maven.org/maven2</url>
-		</repository>
-		<repository>
-			<id>Codehaus Snapshots</id>
-			<url>http://snapshots.repository.codehaus.org</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-        <repository>
-            <id>com.springsource.repository.maven.release</id>  
-			<url>http://maven.springframework.org/release/</url> 
-        </repository>
-		
-    </repositories>
-    
-	<profiles>
-	
-		<!-- eg: mvn clean install  -Pxxx -Dmaven.test.skip=true -->
-		<profile>
-			<id>dev</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<environment>ebi-local</environment>
-				<security.level>6</security.level>
-				<job.enable>true</job.enable>
-				<log.level>info</log.level>
-				<db.username>root</db.username>
-				<db.password>boubei@com</db.password>
-				<db.url>127.0.0.1:3306/tssbi</db.url>
-				<tomcat.url>127.0.0.1:8080</tomcat.url>
-			</properties>
-		</profile>
-		
-	</profiles>
 
 </project>
